_sass/_board-member.scss
/* === Board Member Styles for Flip Effect === */

.business-card-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Flexible minimum size */
  gap: 20px; /* Space between cards */
  padding: 10px; /* Padding for the container */
}





/* Business Card */
.business-card {
  width: 275px; /* Adjusted for vertical alignment */
  height: 350px; /* Increased height for vertical design */
  perspective: 1000px;
  margin: 0 auto;
  border-radius: 10px;
}

/* Inner Card */
.business-card-inner {
  width: 100%;
  height: 100%;
  position: relative;
  transform-style: preserve-3d;
  transition: transform 0.7s ease;
}

.business-card:hover .business-card-inner {
  transform: rotateY(180deg);
}

/* Card Front */
.business-card-front {
  position: absolute;
  width: 100%;
  height: 100%;
  backface-visibility: hidden;
  border-radius: 10px;
  background: linear-gradient(135deg, #eeeeee, #eeeeee); /* Subtle gradient */
  border: 2px solid #e2e2e2;
  display: flex;
  flex-direction: column; /* Align items vertically */
  justify-content: space-between; /* Space out content */
  align-items: center;
  text-align: center;
  padding: 20px;
  border-radius: 8px; /* Soft rounded corners for a modern touch */
  box-shadow: 4px 8px 16px rgba(0, 0, 0, 0.1); /* Subtle shadow for slight depth */
  transition: box-shadow 0.3s ease;
}

/* Styling for the circular image container */
.business-card-front img {
  width: 150px; /* Larger image for vertical orientation */
  height: 150px;
  border-radius: 50%;
  margin-bottom: 15px;
  border: 2px solid #9b1c31;
}

.business-card-front h3 {
  font-size: 1.4em;
  color: #333;
  margin: 10px 0;
  font-weight: bold;
}

.business-card-front .board-role {
  font-size: 0.8em;
  color: #9b1c31;
  font-style: italic;
  margin-top: 5px;
}

/* Card Back */
.business-card-back {
  position: absolute;
  width: 100%;
  height: 100%;
  backface-visibility: hidden;
  border-radius: 10px;
  background-color: #9b1c31;
  border: 1px solid #9b1c31;
  transform: rotateY(180deg);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  padding: 20px;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
}

.business-card-back p {
  font-size: 1em;
  color: #fff;
  margin-bottom: 20px;
  line-height: 1.5;
  
}

.business-card-back .social-links {
  display: flex;
  gap: 15px;
  text-decoration: none; /* Removes default underline for links */
}

.business-card-back .social-links a {
  color: #fff;
  background-color: none;
  border-radius: 50%;
  padding: 10px;
  font-size: 1.7em;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: background-color 0.3s ease, transform 0.3s ease;
}

.business-card-back .social-links a:hover {
  background-color: #7f1628;
  transform: scale(1.1);
}

